--- a/quran.html
+++ b/quran.html
@@ -5,13 +5,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   
+
 </head>
 
 
 <body>
 
-    <div  style="margin-left: 600px;">
+    <div  style="margin-left: 750px;">
         <button id="next" class="btn btn-secondary">next</button>
         <button id="previous" style="margin-left: 100px;"  class="btn btn-secondary">previous</button>
     </div>
@@ -23,40 +23,13 @@
     <br>
     <br>
 
-    <img src="" id="image" style="margin-left: 190px;">
+    <img src="" id="image" style="margin-left: 400px;">
+ 
 
  
 
 
-    <script>
-        let fileNames = [];
-
-        for (let i = 1; i <= 604; i++) {
-            fileNames.push(`./quran-images/${i}.png`);
-        }
-
-        document.getElementById('image').src = fileNames[0];
-
-        let currentIndex = 0;
-
-        function displayNextImage() {
-            if (currentIndex < fileNames.length - 1 ) {
-                document.getElementById('image').src = fileNames[currentIndex];
-                currentIndex++;
-            }
-        }
-
-
-        function displayPreviousImage() {
-            if (currentIndex > 0) {
-                document.getElementById('image').src = fileNames[currentIndex];
-                currentIndex--;
-            }
-        }
-
-        document.getElementById('next').onclick=displayNextImage;
-        document.getElementById('previous').onclick=displayPreviousImage;
-    </script>
+    <script src="index.js"> </script>
 
 
 
