--- a/quran.html
+++ b/quran.html
@@ -17,12 +17,14 @@
     </div>
 
   
- 
     <br>
     <br>
     <br>
     <br>
+     
 
+
+   <p style="margin-left: 800px; font-size: 40px;"></p>
     <img src="" id="image" style="margin-left: 400px;">
  
 
