--- a/quran.html
+++ b/quran.html
@@ -5,7 +5,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+<style>
+    #page{
+     border-radius: 50px;
+     margin-left: 600px; 
+     font-size: 40px;
+    }
+  
+</style>
 </head>
 
 
@@ -17,12 +24,15 @@
     </div>
 
   
+
     <br>
     <br>
     <br>
     <br>
      
 
+   <input type="text" id="page" placeholder="write page number">
+   <button class="btn btn-info" id="getpage">click</button>
 
    <p style="margin-left: 800px; font-size: 40px;"></p>
     <img src="" id="image" style="margin-left: 400px;">
